# Meta-Pytorch-Hackathon

./: .gitignore  .hfignore  BLOG.md  Dockerfile  Memex_~_LarpLegends.ipynb  PROJECT_CONTEXT.md  README.md  TRAINING.md  __init__.py  analysis_results.md_sus.resolved  client.py  colab_selfplay_train.py  demo_eval.py  eval_harness.py  implementation_plan_help.md.resolved  inference.py  models.py  openenv.yaml  openenv_server.py  pyproject.toml  requirements.txt  self_play.py  state_manager.py  train_adversary.py  train_defender_ppo.py  train_dpo.py  train_grpo.py  train_launderer_ppo.py  train_ppo.py  train_ppo_70b.py  validate.sh  verified_review.md
archive/: hotswap.py  implementation_plan_cleannn  openenv-skills.md  pyproject.toml  train_defender_ppo.py  train_dpo.py
curriculum/: __init__.py  oracle.py  plr_engine.py
data/: README.md
demo_output/: episode_meta.json  step_001.json  step_002.json  step_003.json  step_004.json  step_005.json  step_006.json  step_007.json  step_008.json  step_009.json  step_010.json  step_011.json  step_012.json  step_013.json  step_014.json  step_015.json
design-skills/: graph-investigation-skill.md
frontend/: next.config.ts  package-lock.json  package.json
graders/: __init__.py  grader.py
scenarios/: __init__.py  adversary_agent.py  base.py  compliance_manual.py  easy.py  hard.py  medium.py  procedural_generator.py
server/: __init__.py  aml_environment.py  app.py  launderer_env.py
static_frontend/: 404.html  __next.__PAGE__.txt  __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  index.html  index.txt
(+75 files in other folders)
