[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aml_investigation_env"
version = "0.2.0"
description = "Memex OS-Agent Benchmark — OpenEnv-compatible AML Investigation Environment"
authors = [
    {name = "Memex Team"},
]
dependencies = [
    "pydantic>=2.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "httpx>=0.25.0",
    "openai>=1.6.0",
    "openenv-core>=0.2.0",
    "numpy>=1.24.0",
]

[project.scripts]
server = "openenv_server:main"

[tool.hatch.build.targets.wheel]
packages = [
    "server",
    "scenarios",
    "graders",
    "curriculum",
]
# Include top-level modules
[tool.hatch.build.targets.wheel.force-include]
"models.py" = "models.py"
"state_manager.py" = "state_manager.py"
"client.py" = "client.py"
"inference.py" = "inference.py"
"openenv_server.py" = "openenv_server.py"
"hotswap.py" = "hotswap.py"


